Fix border-radius truncated background line

--- a/static/css/index.css
+++ b/static/css/index.css
@@ -73,6 +73,7 @@ body.demo-two{
     /*background: rgba(0,0,0,0.3);*/
 
     background-size: 1px 20px, 20px 1px, 1px 20px, 20px 1px;
+    border-radius: 0;
 }
 .bg-alt {
     background-color: #fff;
